add basic audio player service using ExoPlayer

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">PepeMusic</string>
+    <string name="playback_channel_name">Playback</string>
 </resources>
